force-app/main/default/objects/Drive_Delivery_Movement__c/Drive_Delivery_Movement__c.object-meta.xml
<CustomObject>
    <description>Represents a single blood drive pickup trip (Movement) sent to TMS. Parent of Drive Delivery Shipment records.</description>
    <label>Drive Delivery Movement</label>
    <nameField>
        <displayFormat>DDM-{00000000}</displayFormat>
        <label>Drive Delivery Movement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drive Delivery Movements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>