force-app/main/default/objects/Drive_Delivery_Movement__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <inlineHelpText>Carrier Information for the Movement.</inlineHelpText>
    <label>Carrier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Redcross Employee</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>