force-app/main/default/objects/Drive_Delivery_Movement__c/fields/Delivery_Job_Info__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Job_Info__c</fullName>
    <description>Hyperlink to Drive Delivery Job with Custom Identifier for Drive Delivery Job as text</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Primary_Drive_Delivery_Job__c , Primary_Drive_Delivery_Job__r.Name &amp; &quot; - &quot; &amp; TEXT(Primary_Drive_Delivery_Job__r.sked_Type__c) &amp; &quot; - &quot; &amp; TEXT( Primary_Drive_Delivery_Job__r.sked_Pick_Up_Time__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Job Info</label>
    <type>Text</type>
</CustomField>