force-app/main/default/objects/Drive_Delivery_Movement__c/fields/Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>Drive_Date__c</fullName>
    <description>Drive Date for Related Drive</description>
    <formula>Primary_Drive__r.sked_Drive_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Date</label>
    <type>Date</type>
</CustomField>