force-app/main/default/objects/Drive_Delivery_Movement__c/fields/Drive_Site_City__c.field-meta.xml
<CustomField>
    <fullName>Drive_Site_City__c</fullName>
    <description>City of Relate Drive Site</description>
    <formula>Primary_Drive__r.sked_Drive_Site__r.sked_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Site City</label>
    <type>Text</type>
</CustomField>