force-app/main/default/objects/Drive_Delivery_Movement__c/fields/Drive_Site_State__c.field-meta.xml
<CustomField>
    <fullName>Drive_Site_State__c</fullName>
    <description>State of Relate Drive Site</description>
    <formula>Primary_Drive__r.sked_Drive_Site__r.sked_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Site State</label>
    <type>Text</type>
</CustomField>