force-app/main/default/objects/Drive_Delivery_Movement__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <inlineHelpText>Equipment Type needed for TMS Integration.</inlineHelpText>
    <label>Equipment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car</fullName>
                <default>true</default>
                <label>Car</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>