force-app/main/default/objects/Drive_Delivery_Movement__c/fields/Is_Round_Trip__c.field-meta.xml
<CustomField>
    <fullName>Is_Round_Trip__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Denotes if the movement is a Round Trip. If checked, a shipment is automatically created with Stop Type as End.</inlineHelpText>
    <label>Is Round Trip</label>
    <type>Checkbox</type>
</CustomField>