force-app/main/default/objects/Drive_Delivery_Movement__c/fields/Movement_Number__c.field-meta.xml
<CustomField>
    <fullName>Movement_Number__c</fullName>
    <inlineHelpText>User Defined Movement Number for the Movement.</inlineHelpText>
    <label>Movement Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>