force-app/main/default/objects/Drive_Delivery_Movement__c/fields/Primary_Drive__c.field-meta.xml
<CustomField>
    <fullName>Primary_Drive__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Drive from which the Movement Creation is initiated. Pre-populated if reference available.</inlineHelpText>
    <label>Drive</label>
    <referenceTo>sked_Drive__c</referenceTo>
    <relationshipLabel>Drive Delivery Movements</relationshipLabel>
    <relationshipName>Drive_Delivery_Movements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>