force-app/main/default/objects/Drive_Delivery_Movement__c/fields/Primary_Drive_Delivery_Job__c.field-meta.xml
<CustomField>
    <fullName>Primary_Drive_Delivery_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Delivery Job from which the Movement Creation is initiated. Pre-populated if reference available.</inlineHelpText>
    <label>Drive Delivery Job</label>
    <referenceTo>sked_Drive_Delivery_Job__c</referenceTo>
    <relationshipLabel>Drive Delivery Movements</relationshipLabel>
    <relationshipName>Movement_Drive_Delivery_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>