force-app/main/default/objects/Drive_Delivery_Movement__c/fields/Salesforce_Url__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Url__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_580, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_580)) &amp; &quot;lightning/r/&quot;</formula>
    <label>Salesforce Url</label>
    <type>Text</type>
</CustomField>