force-app/main/default/objects/Drive_Delivery_Movement__c/validationRules/Movement_Prevent_Edits_In_Final_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Movement_Prevent_Edits_In_Final_Status</fullName>
    <active>true</active>
    <description>Once a record is set to Final, fields cannot be modified unless you are moving the status to Canceled.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISPICKVAL(PRIORVALUE(Status__c), &apos;Final&apos;),
    NOT(ISPICKVAL(Status__c, &apos;Canceled&apos;))
)</errorConditionFormula>
    <errorMessage>Record is already finalized. No information can be changed.</errorMessage>
</ValidationRule>