force-app/main/default/objects/Drive_Delivery_Movement__c/validationRules/Prevent_Movement_For_Past_Drives.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Movement_For_Past_Drives</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    NOT(ISBLANK(Primary_Drive__c)),
    NOT(ISBLANK(Primary_Drive__r.sked_Drive_Date__c)),
    Primary_Drive__r.sked_Drive_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>You cannot create a new Delivery Movement for a Drive that occurred in the past.</errorMessage>
</ValidationRule>