force-app/main/default/objects/Drive_Delivery_Movement__c/validationRules/Prevent_Movement_On_Cancelled_Drive.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Movement_On_Cancelled_Drive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    NOT(ISBLANK(Primary_Drive__c)),
    ISPICKVAL(Primary_Drive__r.sked_Status__c, &quot;Cancel&quot;)
)</errorConditionFormula>
    <errorMessage>This Drive is cancelled. You cannot create a new Delivery Movement for a cancelled Drive.</errorMessage>
</ValidationRule>