force-app/main/default/objects/Drive_Delivery_Movement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Movement_Number__c</columns>
    <columns>Primary_Drive__c</columns>
    <columns>Delivery_Job_Info__c</columns>
    <columns>Carrier__c</columns>
    <columns>Is_Round_Trip__c</columns>
    <columns>Status__c</columns>
    <columns>Drive_Date__c</columns>
    <columns>Drive_Site_City__c</columns>
    <columns>Drive_Site_State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>APS_Admin</group>
        <group>Global_Admin</group>
        <group>Manufacturing</group>
    </sharedTo>
</ListView>